# domino

./: .gitignore  README.md
domino/: CMakeLists.txt  README .txt  README.md
domino/doxy/html/: annotated.html  annotated_dup.js  classes.html  defs_8h.html  defs_8h.js  defs_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  doxygen_crawl.html  draw_8c.html  draw_8c.js  draw_8h.html  draw_8h.js  draw_8h_source.html  drawing__utils_8c.html  drawing__utils_8c.js  files.html  font_8c.html  font_8c.js  font_8h.html  font_8h.js  font_8h_source.html  functions.html  functions_vars.html  game_8c.html  game_8c.js  game_8h.html  game_8h.js  game_8h_source.html  (+39 more)
domino/src/: defs.h  draw.c  draw.h  drawing_utils.c  font.c  font.h  game.c  game.h  init.c  init.h  input.c  input.h  main.c  main.h  structs.h  tessera.c
domino3/: CMakeLists.txt  README.md  defs.h  draw.c  draw.h  drawing_utils.c  font.c  game.c  game.h  init.c  input.c  input.h  main.c  structs.h  tessera.c  tessera.h
domino3/SDL2/cmake/: sdl2-config-version.cmake  sdl2-config.cmake
domino3/SDL2/docs/: README-cmake.md  README-emscripten.md  README-macos.md  README-n3ds.md  README-ps2.md  README-psp.md
domino3/SDL2/i686-w64-mingw32/lib/cmake/SDL2/: sdl2-config-version.cmake  sdl2-config.cmake
domino3/SDL2/test/: CMakeLists.txt
domino3/SDL2/x86_64-w64-mingw32/lib/cmake/SDL2/: sdl2-config.cmake
domino3/src/: defs.h  draw.c  draw.h  drawing_utils.c  font.c  font.h  game.c  game.h  init.c  input.c  input.h  main.c  main.h  structs.h  tessera.c
iap/: main.c
(+85 files in other folders)
